"ChangeLog"

2005-02-06	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-07-set-07:
	  Obliterated multikey_base, multikey_map_base.
	  (Actually, just #if 0'd all referenceds to them)
	  A few regression tests were updated with more accurate
	  error reporting in test/parser/param.  

	+ -set-08:
	  Expurgated any and all references to the virtual base types
	  involving multikey and multikey_map.  

	+ -set-09:
	  Factored out multikey implementation into seperate struct, 
	  for the sake of specializing the <1> case.  
	  Implements standard sequence/iterator interface.
	  Replaced direct references to indices[] array with iterators.  
	  Removed (comment) specialization of multikey_map using qmap
	  as the implementation type, no longer needed.  

	+ -set-10:
	  Eliminated virtual base classes (in comments, flagged out):
		  base_multidimensional_qmap
		  base_multidimensional_sparse_set
	  Internalized/privatized implementation of 
	  simple_instance_reference::mset_base, defining as a module-local
	  virtual base class in "art_object_inst_ref.cc".
	  In general, we prefer this pattern of "let the user virtualize"
	  the various dimension-specific data structures.  
	  We provide a uniform functional interface to make this easy.  

	+ -set-11:
	  Cleaned out commented and flagged out blocks of code
	  removed from revision -set-10.


2005-02-05	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-07-set-01:
	  Many util library improvements.

	+ "pointer_traits" completely re-done.
	  Individualized traits, for better orthogonal design.  
	  Instantiating pointer_traits for the purpose of using one trait
	  would try result in instantiating for all traits, some of 
	  which were not applicable.  
	  Leveraged partial specializations in various pointer classes.  

	+ "const_assoc_query" an implementation-independent wrapper
	  for maps to overload the lookup [] operator.  