@@ -1,5 +1,16 @@
 "ChangeLog"
 
+2005-02-07	David Fang	<fangism@users.sourceforge.net>
+
+	* ARTXX-00-01-04-main-00-04-object-01-07-set-12:
+	+ "ring_node.h": eliminated need for const_cast of second
+	  pointer in iterator construction by const-ifying 
+	  the second pointer member, which is never dereferenced anyways.  
+
+	+ -set-13: "multikey_assoc*": multidimensional associative 
+	  container adapter.  
+
+
 2005-02-06	David Fang	<fangism@users.sourceforge.net>
 
 	* ARTXX-00-01-04-main-00-04-object-01-07-set-07:
